# Programming_HW

./: pyproject.toml
sentece_redactor/: __init__.py  __main__.py
sentece_redactor/prac_10/: row_modifier.py
