[tool.poetry]
name = "Ann_Programming_HW"
version = "0.1.0"
description = ""
authors = ["shenderrring <vinsageold@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^4.0.1"
flake8-bugbear = "^22.4.25"
flake8-builtins = "^1.5.3"
flake8-variables-names = "^0.0.5"
pep8-naming = "^0.12.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
